Fix HTMX spinner background overflowing rounded edges inside quoted tweets

--- a/internal/webserver/static/styles.css
+++ b/internal/webserver/static/styles.css
@@ -174,7 +174,8 @@ dialog::backdrop {
     outline-width: 1px;
 }
 .rounded-gray-outline, .rounded-gray-outline > .tweet {
-    border-radius: 20px;
+    border-radius: 1.5em;
+    overflow: hidden;
 }
 
 .profile-banner-image {
